WP-06: resolve independent review findings